--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^4.1.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.13",
